Adicionado rotação na seleção de dúvida
Adicionado rotação na seleção de dúvida

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -112,6 +112,14 @@ h1, h2{
   right: 24px;
 }
 
+.setaBaixo {
+  transition: transform 0.3s;
+}
+
+.girar180 {
+  transform: rotate(180deg);
+}
+
 .duvida .paragrafo{
   border-right:1px solid #FF725E;
   border-left:1px solid #FF725E;
